fix payment card api spec
