# api/jester/spec/openapi.yaml
@@ -138,7 +138,7 @@ paths:
           in: query
           description: |
             次のページの商品情報一覧を取得するためのカーソル。
-            カーソルは商品IDをbase64でエンコードした文字列を指定する
+            カーソルは商品IDをbase64でエンコードした文字列を指定する。
           required: false
           schema:
             type: string
@@ -148,7 +148,7 @@ paths:
           in: query
           description: |
             取得する商品情報数を指定。
-            デフォルトは10。1度に最大20件まで取得可能
+            デフォルトは10。1度に最大20件まで取得可能。
           required: false
           schema:
             type: integer
@@ -190,6 +190,69 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Product'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+  /v1/payments/cards:
+    get:
+      tags:
+        - v1
+        - payments/cards
+      summary: Get credit card details
+      description: 登録されたクレジットカード情報を取得します。
+      operationId: getCreditCard
+      responses:
+        '200':
+          description: クレジットカード情報の取得に成功しました。
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetCreditCard'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+    post:
+      tags:
+        - v1
+        - payments/cards
+      summary: Create new credit card
+      description: |-
+        新しいクレジットカードを登録します。
+        事前に外部のカード登録APIを実行し、登録後に生成されたカードトークンをバックエンドサーバにリクエストする形式をとる。
+      operationId: createCreditCard
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateCreditCard'
+      responses:
+        '204':
+          description: クレジットカードの登録に成功しました。
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+    delete:
+      tags:
+        - v1
+        - payments/cards
+      summary: Delete credit card
+      description: 登録されたクレジットカードを削除します。
+      operationId: deleteCreditCard
+      responses:
+        '204':
+          description: クレジットカードの削除に成功しました。
         '400':
           $ref: '#/components/responses/BadRequest'
         '401':
@@ -493,6 +556,35 @@ components:
           type: string
           description: 商品イメージのURL
           example: https://example.com/images/10001001/product.jpg
+    GetCreditCard:
+      type: array
+      items:
+        type: object
+        properties:
+          masked_card_number:
+            type: string
+            description: マスキングされたカード番号（***** + 下3桁）
+            example: '*****123'
+          is_default:
+            type: boolean
+            description: デフォルトのクレジットカードかどうか
+            example: true
+    CreateCreditCard:
+      type: object
+      required:
+        - token
+        - is_default
+      properties:
+        token:
+          type: string
+          description: |
+            フロントエンドで登録済みのカード情報に紐付く一意のトークン。
+            セキュアに生成され、カード番号などの生データを含まない形式。
+          example: 9f9213b2-9687-6910-d2ec-3a247582be2d
+        is_default:
+          type: boolean
+          description: 登録するカードをデフォルトとして設定するか
+          example: true
   responses:
     BadRequest:
       description: Bad Request
